--- a/cw_2/index.html
+++ b/cw_2/index.html
@@ -49,13 +49,13 @@
     //якщо в змінну записали щось інше, спрацьовує else
 
     let x = true;
-    if(x === 1){
+    if(x === 'number'){
         console.log('1');
-    }else if(x === 'string'){
+    }else if(x === "string"){
         console.log('2');
-    }else if (x === true || false){
+    }else if (x === "boolean"){
         console.log('3');
-    }else if(x === []  || {}){
+    }else if(x === "object"){
         console.log('4');
     }else{
         console.log('nichoho nema');
