--- a/eroe_2/index.html
+++ b/eroe_2/index.html
@@ -10,13 +10,10 @@
   // кількість елементів у масиві більше або дорівнює 3, то виводиться повідомлення про те, що це великий масив, в якому  3 і більше елементи.
   // Інакше слід вивести на екран повідомлення про те, що це маленький масив, в якому менше 3-х елементів.
   let friends = ["Ivan", "Slavik", "Grisha", "Lera", "Ira"];
-  for(let i = 0; friends <= i; i++){
-    let res = i;
-    if(res<=3){
-      console.log('menshe');
-    }else{
-      console.log('bilshe');
-    }
+  if(friends.length <=3){
+    console.log('Масив має менше ніж 3 елементи');
+  }else{
+    console.log('Масив має більше ніж 3 елементи');
   }
 
 
@@ -24,17 +21,21 @@
   // - Маємо 3 числа і між ним  нам потрібно знайти те що посередині.
   //   Знайти, яке з них є середнім (більше одного, але менше за інше). Перевірити, чи знаходиться перше число між двома іншими.
 
+
+
   // - Перепишіть конструкцію if з використанням умовного оператора '?':
+  let a = 1;
+  let b = 5;
   let result;
-  if (a + b < 4) {
-    result = 'Мало';
-  } else {
-    result = 'Багато';
-  }
+  (a + b < 4) ? console.log('Мало') : console.log('Багато');
+
 
 
   // - Маємо будь яке число від -100 , 0 , +100 потрібно перевірити яким є число: позитивним, негативним або нулем
   // напишіть це тернарним оператором
+  let x= 0;
+  (x < 0) ? console.log('дорівнює -'):
+  (x == 0) ? console.log('дорівнює 0') : console.log('дорівнює +');
 </script>
 </body>
 </html>
