--- a/eroe_2/index.html
+++ b/eroe_2/index.html
@@ -6,36 +6,48 @@
 </head>
 <body>
 <script>
-  //- Нам дано масив друзів let friends = ["Ivan", "Slavik", "Grisha", "Lera", "Ira"]; Потрібно зробити перевірку якщо
-  // кількість елементів у масиві більше або дорівнює 3, то виводиться повідомлення про те, що це великий масив, в якому  3 і більше елементи.
-  // Інакше слід вивести на екран повідомлення про те, що це маленький масив, в якому менше 3-х елементів.
-  let friends = ["Ivan", "Slavik", "Grisha", "Lera", "Ira"];
-  if(friends.length <=3){
-    console.log('Масив має менше ніж 3 елементи');
-  }else{
-    console.log('Масив має більше ніж 3 елементи');
-  }
+    //- Нам дано масив друзів let friends = ["Ivan", "Slavik", "Grisha", "Lera", "Ira"]; Потрібно зробити перевірку якщо
+    // кількість елементів у масиві більше або дорівнює 3, то виводиться повідомлення про те, що це великий масив, в якому  3 і більше елементи.
+    // Інакше слід вивести на екран повідомлення про те, що це маленький масив, в якому менше 3-х елементів.
+    let friends = ["Ivan", "Slavik", "Grisha", "Lera", "Ira"];
+    if (friends.length <= 3) {
+        console.log('Масив має менше ніж 3 елементи');
+    } else {
+        console.log('Масив має більше ніж 3 елементи');
+    }
+
+
+    // - Маємо 3 числа і між ним  нам потрібно знайти те що посередині.
+    //   Знайти, яке з них є середнім (більше одного, але менше за інше). Перевірити, чи знаходиться перше число між двома іншими.
+    let a = 1000;
+    let b = 100;
+    let c = 2000;
+    if (a > b && a < c || a < b && a > c){
+       console.log('Середнє ', a);
+    }else if(b > a && b < c || b < a && b > c){
+        console.log('Середнє ', b);
+    }else{
+        console.log('Середнє ', c);
+    }
 
 
 
-  // - Маємо 3 числа і між ним  нам потрібно знайти те що посередині.
-  //   Знайти, яке з них є середнім (більше одного, але менше за інше). Перевірити, чи знаходиться перше число між двома іншими.
+    // let average = [q, w, e].sort( (q, w) => q - w)[1];
+    // console.log(average);
 
 
-
-  // - Перепишіть конструкцію if з використанням умовного оператора '?':
-  let a = 1;
-  let b = 5;
-  let result;
-  (a + b < 4) ? console.log('Мало') : console.log('Багато');
-
+    // - Перепишіть конструкцію if з використанням умовного оператора '?':
+    let q = 1;
+    let w = 5;
+    let result = 0;
+    (q + w < 4) ? console.log('Мало') : console.log('Багато');
 
 
-  // - Маємо будь яке число від -100 , 0 , +100 потрібно перевірити яким є число: позитивним, негативним або нулем
-  // напишіть це тернарним оператором
-  let x= 0;
-  (x < 0) ? console.log('дорівнює -'):
-  (x == 0) ? console.log('дорівнює 0') : console.log('дорівнює +');
+    // - Маємо будь яке число від -100 , 0 , +100 потрібно перевірити яким є число: позитивним, негативним або нулем
+    // напишіть це тернарним оператором
+    let x = 0;
+    (x < 0) ? console.log('дорівнює -') :
+        (x === 0) ? console.log('дорівнює 0') : console.log('дорівнює +');
 </script>
 </body>
 </html>
